--- a/.github/workflows/release-github.yml
+++ b/.github/workflows/release-github.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   buildRelease:
-    if: github.repository == 'hectorqin/reader'
+    if: github.repository == 'penginman/reader'
     name: "Build And Release"
     runs-on: macos-11
     steps:
